--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 	</style>
 
 </head>
-<body
-	class="bg-gradient-to-br from-blue-100 via-white to-purple-100 min-h-screen flex items-center justify-center px-4 text-base">
+<body class="bg-white min-h-screen flex items-center justify-center px-4 text-base">
 	<div class="bg-white/90 backdrop-blur-md p-8 rounded-2xl shadow-2xl w-full max-w-2xl transition-all duration-300">
 		<h1 class="text-2xl md:text-3xl font-extrabold mb-6 text-blue-700 text-center drop-shadow-sm">Prediksi Sentimen</h1>
 		<p class="text-gray-600 mb-6 text-center text-sm md:text-base">Masukkan ulasan Anda di bawah ini untuk memprediksi
@@ -55,9 +54,10 @@
 			class="w-full p-4 border-2 border-blue-200 focus:border-blue-500 rounded-lg mb-4 resize-none transition-all duration-200 shadow-sm focus:shadow-md outline-none text-base"
 			placeholder="Tulis ulasan..."></textarea>
 		<button onclick="handlePredict()"
-			class="w-full bg-gradient-to-r from-blue-600 to-purple-600 text-white px-6 py-3 rounded-lg font-semibold text-base shadow hover:from-blue-700 hover:to-purple-700 transition-all duration-200 flex items-center justify-center gap-2">
+			class="w-full bg-blue-700 text-white px-6 py-3 rounded-lg font-semibold text-base shadow hover:from-blue-700 hover:to-purple-700 transition-all duration-200 flex items-center justify-center gap-2">
 			Prediksi
 		</button>
+
 		<div id="result" class="mt-8 hidden animate-fade-in">
 			<h2 class="text-lg md:text-xl font-bold text-purple-700 mb-2">Hasil:</h2>
 			<p class="text-base md:text-lg"><strong>Label:</strong> <span id="label" class="font-semibold"></span></p>
