--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<h1 class="text-2xl md:text-3xl font-extrabold mb-6 text-blue-700 text-center drop-shadow-sm">Prediksi Sentimen</h1>
 		<p class="text-gray-600 mb-6 text-center text-sm md:text-base">Masukkan ulasan Anda di bawah ini untuk memprediksi
 			sentimen secara otomatis.</p>
-		<textarea id="inputText" rows="5"
+		<textarea id="inputText" rows="5" required
 			class="w-full p-4 border-2 border-blue-200 focus:border-blue-500 rounded-lg mb-4 resize-none transition-all duration-200 shadow-sm focus:shadow-md outline-none text-base"
 			placeholder="Tulis ulasan..."></textarea>
 		<button onclick="handlePredict()"
